# launcher

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README  README.md  RELEASING.md  TROUBLESHOOTING.md  index.html  package.json  splash.html  splash.jsx  updater.html  updater.jsx
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: tauri-desktop.instructions.md
.github/workflows/: backend-released.yml  copilot-setup-steps.yml  cut-release.yml  release.yml
docs/: AUTO_UPDATER.md  mcp.md
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
frontend/: .env.example  index.html  package-lock.json  package.json  splash.html  splash.jsx  updater.html  vite.config.js
frontend/src/: ActivationGate.jsx  App.e2e.test.jsx  App.jsx  activationAuth.js  main.jsx
frontend/src-tauri/: Cargo.toml  agents.json  backends.json  tauri.conf.json
frontend/src-tauri/src/: activation.rs  agent_scaffold.rs  backend_manager.rs  launcher_updater.rs  lib.rs  main.rs
scripts/: bump-version.mjs  generate-latest-json.mjs  publish-to-drive.ps1
src/: App.jsx
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
tools/ch19-line-totaler/: Ch19LineTotaler.csproj  Commands.cs  Directory.Build.props  Extension.cs  README.md
tools/ch19-line-totaler/Properties/: AssemblyInfo.cs
