[package]
name = "launcher"
version = "0.1.0"
description = "Launcher -- Chamber-19 desktop shell"
authors = ["Chamber-19"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
desktop-toolkit = { git = "https://github.com/chamber-19/desktop-toolkit", tag = "v2.7.0" }

[package.metadata.desktop-toolkit]
library-tag = "v2.7.0"
shim-tag    = "v2.7.0"

[features]
custom-protocol = ["tauri/custom-protocol"]